@@ -223,6 +223,7 @@ namespace VISION
 
 	protected:
 	    void highlightBlock(const QString &text);
+	    void rule(XMLNode *rl, const QString &text, QTextCharFormat defForm, int off = 0);
 
 	    XMLNode rules;
     };
